golang-eventbus-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: C:\Program Files (x86)\kompose\kompose.exe convert
    kompose.version: 1.21.0 (992df58d8)
  creationTimestamp: null
  labels:
    io.kompose.service: golang-eventbus-service
  name: golang-eventbus-service
spec:
  ports:
  - name: "8085"
    port: 8085
    targetPort: 8085
  selector:
    io.kompose.service: golang-eventbus-service
status:
  loadBalancer: {}
