ms_dc-networkpolicy.yaml
apiVersion: extensions/v1beta1
kind: NetworkPolicy
metadata:
  creationTimestamp: null
  name: ms_dc
spec:
  ingress:
  - from:
    - podSelector:
        matchLabels:
          io.kompose.network/ms_dc: "true"
  podSelector:
    matchLabels:
      io.kompose.network/ms_dc: "true"
